lib_LTLIBRARIES = liboglp.la
liboglp_la_SOURCES = buffer.cpp common.cpp exception.cpp framebuffer.cpp gl3w.cpp oglp.cpp program.cpp programpipeline.cpp renderbuffer.cpp sampler.cpp shader.cpp texture.cpp uniform.cpp vertexarray.cpp query.cpp
liboglp_la_CXXFLAGS = -I $(top_srcdir)/include
liboglp_la_includedir=$(includedir)/oglp
liboglp_la_include_HEADERS = $(top_srcdir)/include/buffer.h $(top_srcdir)/include/exception.h $(top_srcdir)/include/gl3.h $(top_srcdir)/include/program.h $(top_srcdir)/include/sampler.h $(top_srcdir)/include/uniform.h $(top_srcdir)/include/common.h $(top_srcdir)/include/framebuffer.h $(top_srcdir)/include/gl3w.h $(top_srcdir)/include/programpipeline.h $(top_srcdir)/include/shader.h $(top_srcdir)/include/vertexarray.h $(top_srcdir)/include/config.h $(top_srcdir)/include/gl3ext.h $(top_srcdir)/include/oglp.h $(top_srcdir)/include/renderbuffer.h $(top_srcdir)/include/texture.h $(top_srcdir)/include/query.h
liboglp_la_LIBRARY_VERSION = 0:0:0
liboglp_la_LDFLAGS = -version-info $(liboglp_la_LIBRARY_VERSION)
